--- a/indexfile.html
+++ b/indexfile.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Name</title>
 </head>
-<body>
+<body style="color:brown;">
 	<h1 style="text-align: center;">Brent</h1>
 </body>
 </html>
