--- a/indexfile.html
+++ b/indexfile.html
@@ -4,6 +4,6 @@
 	<title>Name</title>
 </head>
 <body style="color:brown;">
-	<h1 style="text-align: center;">Brent</h1>
+	<h1 style="text-align: center;color: white;">Brent</h1>
 </body>
 </html>
